Update of screenshots on website and added to FAQ

--- a/faq.html
+++ b/faq.html
@@ -72,6 +72,14 @@
           </div>
 
           <div class="card faq-question">
+            <h5>Can you change the map size?</h5>
+            <hr class="faq-question-divider">
+            <div class="card-body faq-question-body">
+                No we are not able to change it. Firefly isn`t able to change it either, without a big amount of work.
+            </div>
+          </div>
+
+          <div class="card faq-question">
             <h5>Can you include <i>&lt;insert feature name&gt;</i> feature?</h5>
             <hr class="faq-question-divider">
             <div class="card-body faq-question-body">
