Updated AIV editor example video in FAQ

--- a/faq.html
+++ b/faq.html
@@ -146,7 +146,7 @@
                 English:
                 <br>
                 <b>SHC AIV Editor setup, tips & tricks</b><br>
-                <iframe width="900" height="500" src="https://www.youtube.com/embed/-sxW3BEAxW0?t=" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="900" height="500" src="https://www.youtube.com/embed/xKEmaIit8vE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
 
