Converted faq to load q&a from json file for easy editing

--- a/faq.html
+++ b/faq.html
@@ -62,91 +62,13 @@
         <div id="faq-content">
           <h4 class="text-center" id="faq-header">Frequently Asked Questions</h4>
 
-          <div class="card faq-question">
-            <h5>Does this work in multiplayer?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                Yes, multiplayer works fine with the UCP installed as long as everyone playing has the same options selected.<br>
-                However, certain features such as changing Player 1's color or Activate Spectator Mode will cause crash or desync in multiplayer!
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>Can you change the map size?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                No we are not able to change it. Firefly isn`t able to change it either, without a big amount of work.
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>Can you include <i>&lt;insert feature name&gt;</i> feature?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                Search in the issue section, and if it hasn't been asked, ask away. 
-                If a developer likes the idea they may look into it, no promises though.
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>I'm a programmer how can I get involved?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                Look through the issues and find ideas you want to fix or implement. Follow this <a href="contributing.html">link</a> to a getting started article for our codebase.
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>I'm not a programmer, is there any other way I can help?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                Testers are always welcome. Let us know in discord if you want to test. 
-                If you follow this github repository you will get an alert when someone submits new code to be used. 
-                See what the code is supposed to do, ask for an installer, and test the changes in game to ensure it works as intended.
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>Am I allowed to modify this for personal use?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                Of course!
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>Where can I get community-developed AIs?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                There are a few bundled with the installer, or you can check out the content creation channel on our discord
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>Is there a tutorial on how to make my own AIs?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                There are a few, check out the <a href="aic/overview.html">AI Character Introduction</a> for an overview on how to make your own AIs.
-                For a video quickstart feel free to watch this tutorial made by Krarilotus
-                <br><br>
-                English:
-                <br>
-                <b>SHC AI character design basics with UCP (ft wolfkiller rat)</b><br>
-                <iframe width="900" height="500" src="https://www.youtube.com/embed/8WgSMmWNzvQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-          </div>
-
-          <div class="card faq-question">
-            <h5>Is there a tutorial on how to make my own castles?</h5>
-            <hr class="faq-question-divider">
-            <div class="card-body faq-question-body">
-                There are many tutorials available on Youtube, and you can check out the <a href="aiv/overview.html">AI Castle Introduction</a> for a brief overview on how the game uses AI castles.
-                For a video quickstart feel free to watch this tutorial made by Krarilotus.
-                <br><br>
-                English:
-                <br>
-                <b>SHC AIV Editor setup, tips & tricks</b><br>
-                <iframe width="900" height="500" src="https://www.youtube.com/embed/xKEmaIit8vE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div id="faq-alt" class="">
+            <div class="card faq-question">
+                <h5>Have any questions?</h5>
+                <hr class="faq-question-divider">
+                <div class="card-body faq-question-body">
+                    Visit the Unofficial Crusader Patch discord <a href="https://discord.gg/vmy7CBR"><img src="https://discordapp.com/api/guilds/426318193603117057/widget.png?style=shield"></a> and ask away!
+                </div>
             </div>
           </div>
 
@@ -159,6 +81,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/faq.js"></script>
 
 </html>
